@@ -1,10 +1,14 @@
 package com.project.Real_Moment.domain.member.repository.impl;
 
+import com.project.Real_Moment.domain.member.entity.Wish;
 import com.project.Real_Moment.domain.member.repository.custom.WishRepositoryCustom;
 import com.project.Real_Moment.presentation.dto.ItemDto;
 import com.project.Real_Moment.presentation.dto.WishDto;
+import com.querydsl.core.QueryResults;
 import com.querydsl.jpa.impl.JPAQueryFactory;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -19,15 +23,19 @@ public class WishRepositoryImpl implements WishRepositoryCustom {
     private final JPAQueryFactory queryFactory;
 
     @Override
-    public List<WishDto.WishListResponse> findWishByMemberId(Long id) {
+    public WishDto.WishListResponseWrapper findWishByMemberId(Long id, int nowPage, int size) {
 
-        return queryFactory
-                .select(wish)
-                .from(wish)
+        Pageable pageable = PageRequest.of(nowPage - 1, size);
+
+        QueryResults<Wish> results = queryFactory
+                .selectFrom(wish)
                 .join(wish.itemId, item)
                 .where(wish.memberId.id.eq(id))
-                .fetch()
-                .stream()
+                .offset(pageable.getOffset())
+                .limit(pageable.getPageSize())
+                .fetchResults();
+
+        List<WishDto.WishListResponse> wishList = results.getResults().stream()
                 .map(wish -> new WishDto.WishListResponse(
                         wish.getId(),
                         new ItemDto.ItemResponse(
@@ -41,6 +49,9 @@ public class WishRepositoryImpl implements WishRepositoryCustom {
                                 wish.getItemId().getMainImg()
                         )
                 ))
-                .collect(Collectors.toList());
+                .toList();
+
+        return new WishDto.WishListResponseWrapper(wishList, results.getTotal(), nowPage);
+
     }
 }
